page for landing

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,16 +11,20 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 
-  .no-scrollbar::-webkit-scrollbar {
-    display: none;
+  
   }
 
-  .no-scrollbar {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-  }
-
+  
+/* Ocultar scrollbars (utilidad global) */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
 }
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE/Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+
 
 @media (prefers-color-scheme: dark) {
   :root {
